// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generating inline messages summary inline result matches snapshot 1`] = `
"
[//]: # (danger-id-blankID;)
[//]: # (  File: File.swift;Line: 5;)
- ❌ Failing message Failing message
- ⚠️ Warning message Warning message
- ✨ message
markdown
  "
`;

exports[`generating messages for BitBucket cloud Mixed icon messages match snapshot 1`] = `
"
  🎉  All green. Well done.

  
  
  

  |      3 Messages |
  | --- |
  | 📝 - Message with custom icon |
  | 🔔 - Message with custom icon2 |
  | ✨ - Test message |

  
  
  
  
  

  Generated by 🚫 [dangerJS](https://danger.systems/js) against e70f3d6468f61a4bef68c9e6eaba9166b096e23c
  
  
  [](http://danger-id-blankID;)
  "
`;

exports[`generating messages for BitBucket cloud empty result matches snapshot, with a compliment 1`] = `
"
  🎉  All green. Well done.

  
  
  
  
  
  
  

  Generated by 🚫 [dangerJS](https://danger.systems/js) against e70f3d6468f61a4bef68c9e6eaba9166b096e23c
  
  
  [](http://danger-id-blankID;)
  "
`;

exports[`generating messages for BitBucket cloud multiple summary result matches snapshot 1`] = `
"
  ⚠️  Danger found some issues. Don't worry, everything is fixable.

  

  |      2 Fails |
  | --- |
  | ❌ - Failing message Failing message |
  | ❌ - Failing message 2, This is Failing message |

  
  

  |      2 Warnings |
  | --- |
  | ⚠️ - Warning message Warning message |
  | ⚠️ - Warning message |

  
  

  |      3 Messages |
  | --- |
  | ✨ - message |
  | ✨ - message 2 |
  | ✨ - message 3 |

  
  
  markdown
  
  

  Generated by ὪB [dangerJS](https://danger.systems/js) against e70f3d6468f61a4bef68c9e6eaba9166b096e23c
  
  
  [](http://danger-id-blankID;)
  "
`;

exports[`generating messages for BitBucket cloud summary result matches snapshot, with a commit 1`] = `
"
  ⚠️  Danger found some issues. Don't worry, everything is fixable.

  

  |      1 Fails |
  | --- |
  | ❌ - Failing message Failing message |

  
  

  |      1 Warnings |
  | --- |
  | ⚠️ - Warning message Warning message |

  
  

  |      1 Messages |
  | --- |
  | ✨ - message |

  
  
  markdown
  
  

  Generated by ὪB [dangerJS](https://danger.systems/js) against e70f3d6468f61a4bef68c9e6eaba9166b096e23c
  
  
  [](http://danger-id-blankID;)
  "
`;

exports[`generating messages for BitBucket cloud summary result matches snapshot, without a commit 1`] = `
"
  ⚠️  Danger found some issues. Don't worry, everything is fixable.

  

  |      1 Fails |
  | --- |
  | ❌ - Failing message Failing message |

  
  

  |      1 Warnings |
  | --- |
  | ⚠️ - Warning message Warning message |

  
  

  |      1 Messages |
  | --- |
  | ✨ - message |

  
  
  markdown
  
  

  Generated by ὪB [dangerJS](https://danger.systems/js)
  
  
  [](http://danger-id-blankID;)
  "
`;
